--- a/config
+++ b/config
@@ -1,5 +1,9 @@
+# Netdevice
+DEBUG_FRAME_HDR=1
+DEBUG_FRAME_DUMP=1
+
 # ARP
-DEBUG_ARP=1
-DEBUG_ARP_REPLY=1
+DEBUG_ARP=0
+DEBUG_ARP_REPLY=0
 DEBUG_ARP_REQUEST=0
-DEBUG_ARP_CACHE=1
+DEBUG_ARP_CACHE=0
