--- a/config
+++ b/config
@@ -3,10 +3,10 @@ DEBUG_FRAME_HDR=0
 DEBUG_FRAME_DUMP=0
 
 # ARP
-DEBUG_ARP=1
-DEBUG_ARP_REPLY=1
-DEBUG_ARP_REQUEST=1
-DEBUG_ARP_CACHE=1
+DEBUG_ARP=0
+DEBUG_ARP_REPLY=0
+DEBUG_ARP_REQUEST=0
+DEBUG_ARP_CACHE=0
 
 # IP
 DEBUG_IP_RECEIVED=0
@@ -15,3 +15,6 @@ DEBUG_IP_SEND=1
 # UDP
 DEBUG_UDP_ADD_PROTO=1
 DEBUG_UDP_SEND=1
+
+# DHCP
+DEBUG_DHCP_DUMP=1
