fear(lib/dhcp): complete DHCP 4 step hand shake

--- a/config
+++ b/config
@@ -10,13 +10,14 @@ DEBUG_ARP_CACHE=0
 
 # IP
 DEBUG_IP_RECEIVED=0
-DEBUG_IP_SEND=1
+DEBUG_IP_SEND=0
 
 # UDP
-DEBUG_UDP_ADD_PROTO=1
-DEBUG_UDP_SEND=1
+DEBUG_UDP_ADD_PROTO=0
+DEBUG_UDP_SEND=0
 
 # DHCP
 DEBUG_DHCP=1
+DEBUG_DHCP_SEND=1
 DEBUG_DHCP_HEADER=1
 DEBUG_DHCP_OPTIONS=1
