feat(main): complete main.c.......................
feat:
1. [lib/util] add readready()
2. [include/netdevice.h] add ETH_COPY()

bug_fix:
1. [src/dhcp_op.c] add chaddr to dhcp_ack_info so
that it won't store the information when it's a
DHCP starvation packet.
2. [lib/dhcp] dhcp_discover() should return if
it's send, since we only have one queue.

style:
1. [src/netdevice] print out the description while
selecting the device.

chore:
1. [config] add comment of each flag.
2. [src/dhcp.c] dhcp_dump() define binds with
DEBUG_DHCP_HEADER

--- a/config
+++ b/config
@@ -1,23 +1,37 @@
-# Netdevice
+# Netdevice ---
+# Ethernet Frame header
 DEBUG_FRAME_HDR=0
+# Ethernet Frame payload
 DEBUG_FRAME_DUMP=0
 
-# ARP
+# ARP ---
+# ARP Packet info
 DEBUG_ARP=0
+# Print if ARP Reply
 DEBUG_ARP_REPLY=0
-DEBUG_ARP_REQUEST=0
+# Print if ARP Request
+DEBUG_ARP_REQUEST=1
+# Printf if ARP table added
 DEBUG_ARP_CACHE=0
 
-# IP
+# IP ---
+# IP Receive info
 DEBUG_IP_RECEIVED=0
+# IP Send info
 DEBUG_IP_SEND=0
 
-# UDP
+# UDP ---
+# Proto upper layer add into UDP
 DEBUG_UDP_ADD_PROTO=0
+# UDP Send info
 DEBUG_UDP_SEND=0
 
-# DHCP
+# DHCP ---
+# DHCP apply info
 DEBUG_DHCP=1
+# DHCP Discover or Request info
 DEBUG_DHCP_SEND=1
+# DHCP header
 DEBUG_DHCP_HEADER=1
+# DHCP message's options
 DEBUG_DHCP_OPTIONS=1
